Updated translations for Serbian.
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42309 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-low/sr@ijekavian.po
+++ b/po/wesnoth-low/sr@ijekavian.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-28 15:15+0200\n"
-"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
+"PO-Revision-Date: 2010-04-29 21:40+0200\n"
+"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
 "MIME-Version: 1.0\n"
@@ -202,11 +202,11 @@ msgstr "Велико дрво"
 msgid "Brightleaf Wood"
 msgstr "Бистролисна шума"
 
-# well-spelled: Западноветарска
+# well-spelled: Западноветринска
 #. [event]
 #: data/campaigns/Legend_of_Wesmere/maps/Kalian_map.cfg:46
 msgid "Westwind Wood"
-msgstr "Западноветринска шума"
+msgstr "Западновјетринска шума"
 
 # well-spelled: Јужноветринска
 #. [event]
@@ -297,9 +297,9 @@ msgid ""
 "little heed to anyone younger than a century old."
 msgstr ""
 "Велики вилењачки јунак Каленз роди се у тихој зеленој шуми Линтанирској, на "
-"ободима Велике сјеверне шуме. Иако не бијеше племенита рода, рано је исказао "
+"ободима Велике сјеверне шуме. Иако не бјеше племенита рода, рано је исказао "
 "надареност у вјештинама свог народа. Хитрим умом задобио је више од "
-"уобичајеног поштовања међу старешинама, иначе шкртим у поклањању пажње било "
+"уобичајеног поштовања међу старјешинама, иначе шкртим у поклањању пажње било "
 "коме млађем од стољећа."
 
 #. [part]
@@ -323,10 +323,10 @@ msgid ""
 "Kalenz's long childhood were a golden age, and the last time of untroubled "
 "peace."
 msgstr ""
-"Неке промјене бијеху набоље: вилењаци, разбуђени послије дугог сна, почеше "
-"да се множе. Али су друге биле врло лоше, а најгора од њих приспијеће "
-"оркова, сатирача, дрвоубица. Године Калензовог дугог дјетињства биле су "
-"златно доба, посљедњи тренуци спокојног мира."
+"Неке промјене бјеху набоље: вилењаци, разбуђени послије дугог сна, почеше да "
+"се множе. Али су друге биле врло лоше, а најгора од њих приспијеће оркова, "
+"сатирача, дрвоубица. Године Калензовог дугог дјетињства биле су златно доба, "
+"посљедњи тренуци спокојног мира."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:61
@@ -340,11 +340,10 @@ msgid ""
 "This is the story of Kalenz, and of the Elves in the days of the humans in "
 "Wesnoth."
 msgstr ""
-"Вилењаци никада нису били ратнички народ, нити припремљени за неизбијежни "
-"рат против оркова. Каленз одрасте исте оне године које се Ерлорнас од "
-"Весмера сударио с првим орковским пљачкашима. Током наредне деценије "
-"орковски упади умногоме порастоше, и сијенка се њихова све више надвијала "
-"над вилењацима.\n"
+"Вилењаци никада нису били ратнички народ, нити припремљени за неизбјежни рат "
+"против оркова. Каленз одрасте исте оне године које се Ерлорнас од Весмера "
+"сударио с првим орковским пљачкашима. Током наредне деценије орковски упади "
+"умногоме порастоше, и сијенка се њихова све више надвијала над вилењацима.\n"
 "\n"
 "Ово је прича о Калензу, и о вилењацима у дане људи из Веснота."
 
@@ -661,8 +660,8 @@ msgid ""
 "Kalenz was right and I was wrong. Go; join Kalenz while yet you can. I and "
 "the remaining elders will cover your retreat as best we may."
 msgstr ""
-"Каленз бијеше у праву, а ја у криву. Пођите; придружите се Калензу док још "
-"можете. Ја и друге старешине покрићемо ваше повлачење најбоље што смогнемо."
+"Каленз бјеше у праву, а ја у криву. Пођите; придружите се Калензу док још "
+"можете. Ја и друге старјешине покрићемо ваше повлачење најбоље што смогнемо."
 
 #. [message]: id=Velon
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:464
@@ -733,7 +732,7 @@ msgid ""
 msgstr ""
 "Каленз и његова дружина пробише се кроз орковски обруч, да би открили како "
 "подручје најбржег пута до Калијана већ врви од оркова. Налет на Калензов "
-"дом, чинило се, био је тек дјелић великог покрета на југ. Не бијеше другог "
+"дом, чинило се, био је тек дјелић великог покрета на југ. Не бјеше другог "
 "избора до да се пође заобилазно, кроз земље које вилењаци најрадије "
 "избјегавају..."
 
@@ -1054,9 +1053,9 @@ msgid ""
 "talk later; we must defeat these orcs together, or at least hold them off "
 "long enough for the humans to come to our aid."
 msgstr ""
-"Не, избјегли смо после напада на наш дом у Линтаниру. Биће времена за причу "
-"касније; морамо заједно одбити ове оркове, или их бар задржати док нам људи "
-"не притекну у помоћ."
+"Не, избјегли смо послије напада на наш дом у Линтаниру. Биће времена за "
+"причу касније; морамо заједно одбити ове оркове, или их бар задржати док нам "
+"људи не притекну у помоћ."
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:807
@@ -1859,7 +1858,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/07_Elves_last_stand_utils.cfg:118
 msgid "Olurf, is that all the dwarves you could find? Was the gold not enough?"
-msgstr "Олурфе, јесу ли то сви патуљци које сакупи? Не бијеше довољно злата?"
+msgstr "Олурфе, јесу ли то сви патуљци које сакупи? Не бјеше довољно злата?"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/07_Elves_last_stand_utils.cfg:122
@@ -2178,7 +2177,7 @@ msgstr ""
 "Увјерени да ће се привидна безбједност Весмера показати скупом варком, "
 "Каленз и Олурф оставише довољно снага и залиха за одбрану, прије него што се "
 "запутише на дуг и опасан пут до великог мага из Торије. Убрзо ће дознати да "
-"опасност бијеше ближа него што су рачунали."
+"опасност бјеше ближа него што су рачунали."
 
 #. [set_variable]
 #: data/campaigns/Legend_of_Wesmere/scenarios/09_Bounty_hunters.cfg:142
@@ -4185,7 +4184,7 @@ msgstr "Хгир"
 #: data/campaigns/Legend_of_Wesmere/scenarios/19_Costly_Revenge.cfg:190
 msgid "That was the last. A bitter day's work, and no memory to be proud of."
 msgstr ""
-"То бијеше посљедњи. Горка ли дана, испословасмо сјећање којим се нећемо "
+"То бјеше посљедњи. Горка ли дана, испословасмо сјећање којим се нећемо "
 "поносити."
 
 #. [message]: id=Landar
@@ -4309,7 +4308,7 @@ msgid ""
 msgstr ""
 "По уништењу некада моћног сауријанског царства, сауријанци се сведоше на "
 "раштркане банде што вребају по пустошима. Али проблемима вилењака још увијек "
-"не бијеше крај..."
+"не бјеше крај..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:25
@@ -4433,8 +4432,8 @@ msgid ""
 "rising. And in the heart of Landar, who had once been their friend, evil was "
 "not vanquished, but festered and grew..."
 msgstr ""
-"Али њиховом миру не бијеше суђено да потраје. У спољашњем свијету, крвава "
-"плима се подизала. У срцу Ландаровом, који им једном бијеше пријатељ, зло не "
+"Али њиховом миру не бјеше суђено да потраје. У спољашњем свијету, крвава "
+"плима се подизала. У срцу Ландаровом, који им једном бјеше пријатељ, зло не "
 "да није копнило, него се снажило и нарастало..."
 
 #. [message]: speaker=narrator
@@ -4457,8 +4456,8 @@ msgid ""
 "You turn on us? I cannot believe it! How has elf come to strive against elf "
 "so bitterly?"
 msgstr ""
-"Окрећеш се против нас? Не могу да верујем! Како дође до тога да вилењак буде "
-"против вилењака тако огорчено?"
+"Окрећеш се против нас? Не могу да вјерујем! Како дође до тога да вилењак "
+"буде против вилењака тако огорчено?"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/21_Elvish_Assassins.cfg:147
@@ -4596,7 +4595,7 @@ msgid ""
 "call, and Kalenz found that recruits came to him as readily as if he were "
 "still High Lord in name."
 msgstr ""
-"Бијеше јасно и Калензу и Клеодил да им неће бити спокоја док је год Ландар "
+"Бјеше јасно и Калензу и Клеодил да им неће бити спокоја док је год Ландар "
 "жив. Али током година њихове подвојености, глас о њиховим дјелима само је "
 "растао. Многа видарка и чаробница одазва се Клеодилином позиву, а Каленз "
 "увидје да му борци прилазе спремно као да је још увијек високи господар по "
@@ -4840,7 +4839,7 @@ msgid ""
 "times and places when his people were in dire straits, and succor them with "
 "wisdom or magic or his bright keen blade."
 msgstr ""
-"Али Калензовој причи још не бијеше крај. Аквагарова клетва се обистинила; "
+"Али Калензовој причи још не бјеше крај. Аквагарова клетва се обистинила; "
 "живота продуженог Крелануовим напитком, надживио је не само своју вољену, "
 "већ и њихову дјецу. Отцијепљен од своје врсте њиховом смртношћу, бјежећи од "
 "одраза својих вољених у њиховим очима, напустио је дом и многе године лутао "
