--- a/po/wesnoth-low/sr@ijekavianlatin.po
+++ b/po/wesnoth-low/sr@ijekavianlatin.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-28 15:15+0200\n"
-"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
+"PO-Revision-Date: 2010-04-29 21:40+0200\n"
+"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
 "MIME-Version: 1.0\n"
@@ -202,11 +202,11 @@ msgstr "Veliko drvo"
 msgid "Brightleaf Wood"
 msgstr "Bistrolisna šuma"
 
-# well-spelled: Западноветарска
+# well-spelled: Западноветринска
 #. [event]
 #: data/campaigns/Legend_of_Wesmere/maps/Kalian_map.cfg:46
 msgid "Westwind Wood"
-msgstr "Zapadnovetrinska šuma"
+msgstr "Zapadnovjetrinska šuma"
 
 # well-spelled: Јужноветринска
 #. [event]
@@ -297,9 +297,9 @@ msgid ""
 "little heed to anyone younger than a century old."
 msgstr ""
 "Veliki vilenjački junak Kalenz rodi se u tihoj zelenoj šumi Lintanirskoj, na "
-"obodima Velike sjeverne šume. Iako ne biješe plemenita roda, rano je iskazao "
+"obodima Velike sjeverne šume. Iako ne bješe plemenita roda, rano je iskazao "
 "nadarenost u vještinama svog naroda. Hitrim umom zadobio je više od "
-"uobičajenog poštovanja među starešinama, inače škrtim u poklanjanju pažnje "
+"uobičajenog poštovanja među starješinama, inače škrtim u poklanjanju pažnje "
 "bilo kome mlađem od stoljeća."
 
 #. [part]
@@ -323,7 +323,7 @@ msgid ""
 "Kalenz's long childhood were a golden age, and the last time of untroubled "
 "peace."
 msgstr ""
-"Neke promjene bijehu nabolje: vilenjaci, razbuđeni poslije dugog sna, počeše "
+"Neke promjene bjehu nabolje: vilenjaci, razbuđeni poslije dugog sna, počeše "
 "da se množe. Ali su druge bile vrlo loše, a najgora od njih prispijeće "
 "orkova, satirača, drvoubica. Godine Kalenzovog dugog djetinjstva bile su "
 "zlatno doba, posljednji trenuci spokojnog mira."
@@ -340,7 +340,7 @@ msgid ""
 "This is the story of Kalenz, and of the Elves in the days of the humans in "
 "Wesnoth."
 msgstr ""
-"Vilenjaci nikada nisu bili ratnički narod, niti pripremljeni za neizbiježni "
+"Vilenjaci nikada nisu bili ratnički narod, niti pripremljeni za neizbježni "
 "rat protiv orkova. Kalenz odraste iste one godine koje se Erlornas od "
 "Vesmera sudario s prvim orkovskim pljačkašima. Tokom naredne decenije "
 "orkovski upadi umnogome porastoše, i sijenka se njihova sve više nadvijala "
@@ -661,8 +661,9 @@ msgid ""
 "Kalenz was right and I was wrong. Go; join Kalenz while yet you can. I and "
 "the remaining elders will cover your retreat as best we may."
 msgstr ""
-"Kalenz biješe u pravu, a ja u krivu. Pođite; pridružite se Kalenzu dok još "
-"možete. Ja i druge starešine pokrićemo vaše povlačenje najbolje što smognemo."
+"Kalenz bješe u pravu, a ja u krivu. Pođite; pridružite se Kalenzu dok još "
+"možete. Ja i druge starješine pokrićemo vaše povlačenje najbolje što "
+"smognemo."
 
 #. [message]: id=Velon
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:464
@@ -733,7 +734,7 @@ msgid ""
 msgstr ""
 "Kalenz i njegova družina probiše se kroz orkovski obruč, da bi otkrili kako "
 "područje najbržeg puta do Kalijana već vrvi od orkova. Nalet na Kalenzov "
-"dom, činilo se, bio je tek djelić velikog pokreta na jug. Ne biješe drugog "
+"dom, činilo se, bio je tek djelić velikog pokreta na jug. Ne bješe drugog "
 "izbora do da se pođe zaobilazno, kroz zemlje koje vilenjaci najradije "
 "izbjegavaju..."
 
@@ -1055,9 +1056,9 @@ msgid ""
 "talk later; we must defeat these orcs together, or at least hold them off "
 "long enough for the humans to come to our aid."
 msgstr ""
-"Ne, izbjegli smo posle napada na naš dom u Lintaniru. Biće vremena za priču "
-"kasnije; moramo zajedno odbiti ove orkove, ili ih bar zadržati dok nam ljudi "
-"ne priteknu u pomoć."
+"Ne, izbjegli smo poslije napada na naš dom u Lintaniru. Biće vremena za "
+"priču kasnije; moramo zajedno odbiti ove orkove, ili ih bar zadržati dok nam "
+"ljudi ne priteknu u pomoć."
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:807
@@ -1861,7 +1862,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/07_Elves_last_stand_utils.cfg:118
 msgid "Olurf, is that all the dwarves you could find? Was the gold not enough?"
-msgstr "Olurfe, jesu li to svi patuljci koje sakupi? Ne biješe dovoljno zlata?"
+msgstr "Olurfe, jesu li to svi patuljci koje sakupi? Ne bješe dovoljno zlata?"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/07_Elves_last_stand_utils.cfg:122
@@ -2181,7 +2182,7 @@ msgstr ""
 "Uvjereni da će se prividna bezbjednost Vesmera pokazati skupom varkom, "
 "Kalenz i Olurf ostaviše dovoljno snaga i zaliha za odbranu, prije nego što "
 "se zaputiše na dug i opasan put do velikog maga iz Torije. Ubrzo će doznati "
-"da opasnost biješe bliža nego što su računali."
+"da opasnost bješe bliža nego što su računali."
 
 #. [set_variable]
 #: data/campaigns/Legend_of_Wesmere/scenarios/09_Bounty_hunters.cfg:142
@@ -4197,7 +4198,7 @@ msgstr "Hgir"
 #: data/campaigns/Legend_of_Wesmere/scenarios/19_Costly_Revenge.cfg:190
 msgid "That was the last. A bitter day's work, and no memory to be proud of."
 msgstr ""
-"To biješe posljednji. Gorka li dana, isposlovasmo sjećanje kojim se nećemo "
+"To bješe posljednji. Gorka li dana, isposlovasmo sjećanje kojim se nećemo "
 "ponositi."
 
 #. [message]: id=Landar
@@ -4321,7 +4322,7 @@ msgid ""
 msgstr ""
 "Po uništenju nekada moćnog saurijanskog carstva, saurijanci se svedoše na "
 "raštrkane bande što vrebaju po pustošima. Ali problemima vilenjaka još "
-"uvijek ne biješe kraj..."
+"uvijek ne bješe kraj..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:25
@@ -4445,9 +4446,9 @@ msgid ""
 "rising. And in the heart of Landar, who had once been their friend, evil was "
 "not vanquished, but festered and grew..."
 msgstr ""
-"Ali njihovom miru ne biješe suđeno da potraje. U spoljašnjem svijetu, krvava "
-"plima se podizala. U srcu Landarovom, koji im jednom biješe prijatelj, zlo "
-"ne da nije kopnilo, nego se snažilo i narastalo..."
+"Ali njihovom miru ne bješe suđeno da potraje. U spoljašnjem svijetu, krvava "
+"plima se podizala. U srcu Landarovom, koji im jednom bješe prijatelj, zlo ne "
+"da nije kopnilo, nego se snažilo i narastalo..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/21_Elvish_Assassins.cfg:99
@@ -4469,7 +4470,7 @@ msgid ""
 "You turn on us? I cannot believe it! How has elf come to strive against elf "
 "so bitterly?"
 msgstr ""
-"Okrećeš se protiv nas? Ne mogu da verujem! Kako dođe do toga da vilenjak "
+"Okrećeš se protiv nas? Ne mogu da vjerujem! Kako dođe do toga da vilenjak "
 "bude protiv vilenjaka tako ogorčeno?"
 
 #. [message]: id=Kalenz
@@ -4608,7 +4609,7 @@ msgid ""
 "call, and Kalenz found that recruits came to him as readily as if he were "
 "still High Lord in name."
 msgstr ""
-"Biješe jasno i Kalenzu i Kleodil da im neće biti spokoja dok je god Landar "
+"Bješe jasno i Kalenzu i Kleodil da im neće biti spokoja dok je god Landar "
 "živ. Ali tokom godina njihove podvojenosti, glas o njihovim djelima samo je "
 "rastao. Mnoga vidarka i čarobnica odazva se Kleodilinom pozivu, a Kalenz "
 "uvidje da mu borci prilaze spremno kao da je još uvijek visoki gospodar po "
@@ -4854,7 +4855,7 @@ msgid ""
 "times and places when his people were in dire straits, and succor them with "
 "wisdom or magic or his bright keen blade."
 msgstr ""
-"Ali Kalenzovoj priči još ne biješe kraj. Akvagarova kletva se obistinila; "
+"Ali Kalenzovoj priči još ne bješe kraj. Akvagarova kletva se obistinila; "
 "života produženog Krelanuovim napitkom, nadživio je ne samo svoju voljenu, "
 "već i njihovu djecu. Otcijepljen od svoje vrste njihovom smrtnošću, bježeći "
 "od odraza svojih voljenih u njihovim očima, napustio je dom i mnoge godine "
