--- a/po/wesnoth-low/sr@latin.po
+++ b/po/wesnoth-low/sr@latin.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-28 15:15+0200\n"
-"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
+"PO-Revision-Date: 2010-04-29 21:40+0200\n"
+"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
 "MIME-Version: 1.0\n"
@@ -202,7 +202,7 @@ msgstr "Veliko drvo"
 msgid "Brightleaf Wood"
 msgstr "Bistrolisna šuma"
 
-# well-spelled: Западноветарска
+# well-spelled: Западноветринска
 #. [event]
 #: data/campaigns/Legend_of_Wesmere/maps/Kalian_map.cfg:46
 msgid "Westwind Wood"
