--- a/po/wesnoth-did/ru.po
+++ b/po/wesnoth-did/ru.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2009-12-07 17:40+0300\n"
-"Last-Translator: Andrey Tikhonov <tiacorpo@gmail.com>\n"
+"PO-Revision-Date: 2010-04-30 13:02+0400\n"
+"Last-Translator: Fedor Khod'kov <fedor76@istra.ru>\n"
 "Language-Team: Russian <bugs.wesnoth.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,9 +59,8 @@ msgstr "Некромант"
 
 #. [campaign]: id=Descent_Into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "(Cредний уровень, 11 сценариев)\n"
+msgstr "(Cредний уровень, 11 сценариев)"
 
 #. [campaign]: id=Descent_Into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
