--- a/po/wesnoth-ei/ru.po
+++ b/po/wesnoth-ei/ru.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: wesnoth-ei.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2009-12-06 15:44+0300\n"
-"Last-Translator: Andrey Tikhonov <tiacorpo@gmail.com>\n"
+"PO-Revision-Date: 2010-04-30 13:01+0400\n"
+"Last-Translator: Fedor Khod'kov <fedor76@istra.ru>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1659,6 +1659,7 @@ msgstr ""
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
 msgstr ""
+"А там, кто знает — может, он вообще подохнет, и наша битва будет за мной."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
