--- a/po/wesnoth-lib/ru.po
+++ b/po/wesnoth-lib/ru.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: wesnoth-lib.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2009-12-07 18:47+0200\n"
-"Last-Translator: Victor Sergienko <singalen@gmail.com>\n"
+"PO-Revision-Date: 2010-04-30 12:03+0400\n"
+"Last-Translator: Fedor Khod'kov <fedor76@istra.ru>\n"
 "Language-Team:  <http://bugs.wesnoth.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -942,7 +942,7 @@ msgstr "Имя:"
 #. [label]: id=lblMessage
 #: data/gui/default/window/game_save_message.cfg:52
 msgid "x"
-msgstr ""
+msgstr "x"
 
 #. [label]: id=lblMessage
 #: data/gui/default/window/game_save_oos.cfg:52
@@ -1652,7 +1652,7 @@ msgstr "Показывать все подключения в холле"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Использовать новый интерфейс холла"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1867,7 +1867,7 @@ msgstr "Не анимировать движения бойцов компьют
 
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Прервать движение вашего бойца при встрече с дружественным бойцом"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
@@ -1902,6 +1902,8 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Использовать новый интерфейс холла (заработает только после ручного "
+"переподключения к серверу)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
@@ -2186,11 +2188,11 @@ msgstr "Зашли в комнату $name"
 
 #: src/gui/dialogs/lobby_main.cpp:1400
 msgid "$player has entered the room"
-msgstr ""
+msgstr "$player вошёл в комнату"
 
 #: src/gui/dialogs/lobby_main.cpp:1438
 msgid "$player has left the room"
-msgstr ""
+msgstr "$player покинул комнату"
 
 #: src/gui/dialogs/lobby_main.cpp:1551
 msgid "Password Required"
