--- a/po/wesnoth-ei/pl.po
+++ b/po/wesnoth-ei/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2009-11-09 18:26+0100\n"
+"PO-Revision-Date: 2010-04-26 12:17+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
 "MIME-Version: 1.0\n"
@@ -1653,7 +1653,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Może on zginie, a ja odniosę zwycięstwo bez walki."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
