--- a/po/wesnoth-lib/pl.po
+++ b/po/wesnoth-lib/pl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-04-19 21:01+0100\n"
+"PO-Revision-Date: 2010-04-26 12:18+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
 "MIME-Version: 1.0\n"
@@ -1645,7 +1645,7 @@ msgstr "Pokazuj wszystkie dołączenia do poczekalni"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Używaj nowego interfejsu poczekalni"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1901,6 +1901,8 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Używaj nowego interfejsu poczekalni (działa jedynie po ręcznym nawiązaniu "
+"ponownego połączenia z serwerem)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
