--- a/po/wesnoth/la.po
+++ b/po/wesnoth/la.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2009-11-16 21:22-0500\n"
+"PO-Revision-Date: 2010-04-30 14:14-0500\n"
 "Last-Translator: Michael Babich (Aethaeryn) <michaelbabich7@gmail.com>\n"
 "Language-Team: Latin\n"
 "MIME-Version: 1.0\n"
@@ -637,7 +637,6 @@ msgstr "Agri"
 #. [section]: id=commands
 #. [topic]: id=..commands
 #: data/core/help.cfg:81 data/core/help.cfg:761
-#, fuzzy
 msgid "Commands"
 msgstr "Imperii"
 
@@ -6915,7 +6914,6 @@ msgstr "Remonstrare"
 
 #. [menu]: id=button-playreplay, type=image
 #: data/themes/macros.cfg:74
-#, fuzzy
 msgid "Play"
 msgstr "Ludere"
 
@@ -7855,7 +7853,6 @@ msgid "damage type: "
 msgstr "genus damni:"
 
 #: src/generate_report.cpp:332
-#, fuzzy
 msgid "vs"
 msgstr "contra"
 
@@ -8484,7 +8481,6 @@ msgid "Team only"
 msgstr "Caeruleus illustris"
 
 #: src/menu_events.cpp:1757
-#, fuzzy
 msgid "Search"
 msgstr "Investigatio"
 
@@ -8525,9 +8521,8 @@ msgid ""
 msgstr ""
 
 #: src/menu_events.cpp:2052 src/menu_events.cpp:2053 src/menu_events.cpp:2076
-#, fuzzy
 msgid "help"
-msgstr "Auxilium"
+msgstr "auxilium"
 
 #: src/menu_events.cpp:2053
 msgid "Type $help_command <command> for more info."
@@ -8539,9 +8534,8 @@ msgid " No help available."
 msgstr "Nullum propositum ad manum"
 
 #: src/menu_events.cpp:2069
-#, fuzzy
 msgid "Usage:"
-msgstr "Nuntius: "
+msgstr ""
 
 #: src/menu_events.cpp:2074
 msgid "aliases:"
@@ -8572,7 +8566,7 @@ msgstr ""
 #: src/menu_events.cpp:2239 src/menu_events.cpp:2241 src/menu_events.cpp:2266
 #: src/menu_events.cpp:2268 src/menu_events.cpp:2270 src/menu_events.cpp:2284
 msgid "<nick>"
-msgstr ""
+msgstr "<nomen>"
 
 #: src/menu_events.cpp:2234
 msgid "Unban a user. He does not have to be in the game but on the server."
@@ -8599,9 +8593,8 @@ msgid "Send a message to the server admins currently online"
 msgstr ""
 
 #: src/menu_events.cpp:2255
-#, fuzzy
 msgid "<message>"
-msgstr "Nuntius: "
+msgstr "<nuntius>"
 
 #: src/menu_events.cpp:2255
 #, fuzzy
@@ -8621,7 +8614,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2260
 msgid "<nick> <message>"
-msgstr ""
+msgstr "<nomen> <nuntius> "
 
 #: src/menu_events.cpp:2264
 msgid "<level> <domain>"
@@ -8755,7 +8748,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2434
 msgid "<side> <nick>"
-msgstr ""
+msgstr "<pars> <nomen>"
 
 #: src/menu_events.cpp:2434
 msgid "Assign control of a side to a different player or observer."
@@ -8846,19 +8839,21 @@ msgstr ""
 
 #: src/menu_events.cpp:2472
 msgid "<var>=<value>"
-msgstr ""
+msgstr "<var>=<pretium>"
 
 #: src/menu_events.cpp:2472
+#, fuzzy
 msgid "Set a scenario variable."
-msgstr ""
+msgstr "variabilis"
 
 #: src/menu_events.cpp:2474
 msgid "<var>"
-msgstr ""
+msgstr "<var>"
 
 #: src/menu_events.cpp:2474
+#, fuzzy
 msgid "Show a scenario variable."
-msgstr ""
+msgstr "variabilis"
 
 #: src/menu_events.cpp:2476
 msgid "Modify a unit variable. (Only top level keys are supported.)"
@@ -8966,9 +8961,8 @@ msgid "There are no players on your friends or ignore list."
 msgstr ""
 
 #: src/menu_events.cpp:2803
-#, fuzzy
 msgid "version"
-msgstr "Versio"
+msgstr "versio"
 
 #: src/menu_events.cpp:2819
 msgid "registering with password *** and no email address"
@@ -9707,7 +9701,6 @@ msgid "Back to turn "
 msgstr "Rursus ad vicem "
 
 #: src/playcampaign.cpp:133 src/playcampaign.cpp:171
-#, fuzzy
 msgid "Defeat"
 msgstr "Clades"
 
@@ -9788,9 +9781,8 @@ msgid "Turns finished early: "
 msgstr "Tractus quibus mature finisti: "
 
 #: src/playsingle_controller.cpp:222
-#, fuzzy
 msgid "Bonus: "
-msgstr "Bonum: "
+msgstr "Praemium: "
 
 #: src/playsingle_controller.cpp:225
 msgid "Gold: "
@@ -9801,9 +9793,8 @@ msgid "Carry over percentage: "
 msgstr ""
 
 #: src/playsingle_controller.cpp:232
-#, fuzzy
 msgid "Bonus Gold: "
-msgstr "Bonum: "
+msgstr "Aurum Praemii: "
 
 #: src/playsingle_controller.cpp:234
 #, fuzzy
@@ -9943,9 +9934,8 @@ msgid "Save already exists. Do you want to overwrite it?"
 msgstr "Iam est nomen hoc. Visne id superscribere?"
 
 #: src/savegame.cpp:694
-#, fuzzy
 msgid "Overwrite?"
-msgstr "Superscriberene?"
+msgstr "Superne scribes?"
 
 #: src/savegame.cpp:704
 #, fuzzy
