--- a/po/wesnoth-lib/la.po
+++ b/po/wesnoth-lib/la.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2009-11-16 21:22-0500\n"
+"PO-Revision-Date: 2010-04-30 14:18-0500\n"
 "Last-Translator: Michael Babich (Aethaeryn) <michaelbabich7@gmail.com>\n"
 "Language-Team: Latin\n"
 "MIME-Version: 1.0\n"
@@ -965,7 +965,7 @@ msgstr "Ludum Exire"
 #. [label]: id=lblTitle
 #: data/gui/default/window/game_save_overwrite.cfg:32
 msgid "Overwrite?"
-msgstr ""
+msgstr "Superne scribes?"
 
 #. [label]: id=lblMessage
 #: data/gui/default/window/game_save_overwrite.cfg:52
@@ -1239,7 +1239,7 @@ msgstr ""
 #: data/gui/default/window/lobby_player_info.cfg:160
 #: data/gui/default/window/mp_cmd_wrapper.cfg:381
 msgid "Kick"
-msgstr ""
+msgstr "Apolactizare"
 
 #. [label]
 #: data/gui/default/window/lobby_player_info.cfg:167
@@ -1249,7 +1249,7 @@ msgstr ""
 #. [button]: id=kick_ban
 #: data/gui/default/window/lobby_player_info.cfg:180
 msgid "Kick/ban"
-msgstr ""
+msgstr "Apolactizare/effugare"
 
 #. [window]: id=mp_cmd_wrapper
 #: data/gui/default/window/mp_cmd_wrapper.cfg:8
@@ -2451,7 +2451,7 @@ msgstr "Consistere"
 
 #: src/hotkeys.cpp:84 src/hotkeys.cpp:91
 msgid "Play"
-msgstr ""
+msgstr "Ludere"
 
 #: src/hotkeys.cpp:86
 msgid "Set Team Label"
@@ -2486,9 +2486,8 @@ msgid "Next Turn"
 msgstr "Tractus Insequens"
 
 #: src/hotkeys.cpp:95
-#, fuzzy
 msgid "Next Side"
-msgstr "Pars proxima"
+msgstr "Pars Proxima"
 
 #: src/hotkeys.cpp:97
 msgid "Full map"
@@ -2883,7 +2882,6 @@ msgid "Action"
 msgstr "Actio"
 
 #: src/preferences_display.cpp:318
-#, fuzzy
 msgid "Binding"
 msgstr "Adligatio"
 
