updated Finnish and Lithuanian translation
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42341 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-did/lt.po
+++ b/po/wesnoth-did/lt.po
@@ -58,9 +58,8 @@ msgstr "Valdovas"
 
 #. [campaign]: id=Descent_Into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "(Vidutinis lygis, 11 scenarijų.)\n"
+msgstr "(Vidutinis lygis, 11 scenarijų.)"
 
 #. [campaign]: id=Descent_Into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
