--- a/po/wesnoth-ei/fi.po
+++ b/po/wesnoth-ei/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.2-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2010-03-22 22:54+0200\n"
+"PO-Revision-Date: 2010-04-30 23:19+0200\n"
 "Last-Translator: Mikko Nikkilä <miccoh@gmail.com>\n"
 "Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -1669,7 +1669,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Ehkäpä hän kuolee ja voitan taistelematta."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
