--- a/po/wesnoth-lib/lt.po
+++ b/po/wesnoth-lib/lt.po
@@ -1444,7 +1444,7 @@ msgstr "Prisijungti prie oficialaus serverio"
 #. [column]
 #: data/gui/default/window/mp_method_selection.cfg:139
 msgid "Log on to the official Wesnoth multiplayer server"
-msgstr "Prisijunkite prie oficialaus Wesnoth daugelio žaidėjų serverio"
+msgstr "Prisijunkite prie oficialaus Vesnoto daugelio žaidėjų serverio"
 
 #. [column]
 #: data/gui/default/window/mp_method_selection.cfg:149
@@ -1587,7 +1587,7 @@ msgstr "Nebuvo nurodytas joks serveris."
 
 #: src/game_preferences.cpp:363
 msgid "player"
-msgstr "žaidėjas"
+msgstr "zaidejas"
 
 #: src/game_preferences_display.cpp:158
 msgid "Full Screen"
@@ -1848,7 +1848,7 @@ msgstr "Neanimuoti judančių DI dalinių"
 
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Draugiško dalinio pastebėjimas sustabdo jūsų dalinio judėjimą"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
