--- a/po/wesnoth-sotbe/lt.po
+++ b/po/wesnoth-sotbe/lt.po
@@ -2816,9 +2816,8 @@ msgstr ""
 
 #. [side]: type=Bandit, id=Sagmar
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:87
-#, fuzzy
 msgid "Sagmar"
-msgstr "Samualas"
+msgstr "Sagmaras"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:98
