--- a/po/wesnoth-lib/fi.po
+++ b/po/wesnoth-lib/fi.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.2-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-02-20 21:55+0200\n"
-"Last-Translator: Samu Voutilainen <smar@smar.fi>\n"
+"PO-Revision-Date: 2010-04-30 23:28+0200\n"
+"Last-Translator: Mikko Nikkilä <miccoh@gmail.com>\n"
 "Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1641,7 +1641,7 @@ msgstr "Näytä kaikki aulaan liittymiset"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Käytä uutta aulaa"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1856,7 +1856,7 @@ msgstr "Älä animoi tietokoneen yksiköiden liikkeitä"
 
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Liittolaisyksikön havaitseminen häiritsee yksikkösi liikkumista"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
@@ -1892,6 +1892,7 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Käytä uutta aulaa (toimii vain manuaalisen uudelleenyhdistyksen jälkeen)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
@@ -2170,11 +2171,11 @@ msgstr "Liitytty huoneeseen $name"
 
 #: src/gui/dialogs/lobby_main.cpp:1400
 msgid "$player has entered the room"
-msgstr ""
+msgstr "$player on saapunut huoneeseen"
 
 #: src/gui/dialogs/lobby_main.cpp:1438
 msgid "$player has left the room"
-msgstr ""
+msgstr "$player on poistunut huoneesta"
 
 #: src/gui/dialogs/lobby_main.cpp:1551
 msgid "Password Required"
