--- a/po/wesnoth/lt.po
+++ b/po/wesnoth/lt.po
@@ -95,15 +95,13 @@ msgstr "Vestibiulio garsai"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "Daug žaidėjų"
+msgstr "Numatytas DI"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "Daug žaidėjų"
+msgstr "RCA DI"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
@@ -4439,9 +4437,8 @@ msgstr "pagyvenęs"
 
 #. [trait]: id=aged
 #: data/core/macros/traits.cfg:222
-#, fuzzy
 msgid "female^aged"
-msgstr "buka"
+msgstr "pagyvęnusi"
 
 #. [color_range]: id=red
 #. [color_range]: id=1
@@ -7552,9 +7549,8 @@ msgid "do not translate the 'all'^[all|<command>]"
 msgstr ""
 
 #: src/menu_events.cpp:1998
-#, fuzzy
 msgid "Error:"
-msgstr "Klaida: "
+msgstr "Klaida:"
 
 #: src/menu_events.cpp:2004
 msgid "Missing argument $arg_id"
@@ -7567,9 +7563,8 @@ msgid ""
 msgstr ""
 
 #: src/menu_events.cpp:2052 src/menu_events.cpp:2053 src/menu_events.cpp:2076
-#, fuzzy
 msgid "help"
-msgstr "Pagalba"
+msgstr "pagalba"
 
 #: src/menu_events.cpp:2053
 msgid "Type $help_command <command> for more info."
@@ -7580,9 +7575,8 @@ msgid " No help available."
 msgstr " Nėra prieinamos pagalbos."
 
 #: src/menu_events.cpp:2069
-#, fuzzy
 msgid "Usage:"
-msgstr "Pranešimas:"
+msgstr "Naudojimas:"
 
 #: src/menu_events.cpp:2074
 msgid "aliases:"
@@ -7642,9 +7636,8 @@ msgid "Send a message to the server admins currently online"
 msgstr "Siųsti pranešimą dabar prisijungusiems serverio administratoriams"
 
 #: src/menu_events.cpp:2255
-#, fuzzy
 msgid "<message>"
-msgstr "Pranešimas:"
+msgstr "<pranešimas>"
 
 #: src/menu_events.cpp:2255
 msgid "Send an emotion or personal action in chat."
@@ -7757,14 +7750,13 @@ msgid "(D) - debug only, (N) - network only, (A) - admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2403
-#, fuzzy
 msgid "(debug command)"
-msgstr "Derinimo režimo komandos"
+msgstr "(derinimo komanda)"
 
 #: src/menu_events.cpp:2404
 #, fuzzy
 msgid "(network only)"
-msgstr "Tinklo žaidėjas"
+msgstr " (tik tinkle)"
 
 #: src/menu_events.cpp:2429
 msgid "Refresh gui."
@@ -7984,9 +7976,8 @@ msgid "There are no players on your friends or ignore list."
 msgstr "Nėra žaidėjų jūsų draugų ar ignoruojamų sąraše."
 
 #: src/menu_events.cpp:2803
-#, fuzzy
 msgid "version"
-msgstr "Versija"
+msgstr "versija"
 
 #: src/menu_events.cpp:2819
 msgid "registering with password *** and no email address"
@@ -9224,7 +9215,7 @@ msgstr ""
 
 #: src/unit.cpp:2494
 msgid " move"
-msgstr "žingsnis"
+msgstr " žingsnis"
 
 #: src/unit.cpp:2510
 msgid "$effect_description per level"
